# pr-agent

./: .gitignore  .pr-agent.yml.example  CONTRIBUTING.md  LICENSE  QUICKSTART_TEST.md  README.md  START_HERE.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  action.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pr-agent.yml  test.yml
scripts/: create_test_pr.sh  setup_test_repo.sh
src/: __init__.py  main.py
src/ai/: claude_client.py  prompts.py
src/analysis/: __init__.py  analyzer.py  diff_processor.py  risk_detector.py
src/config/: __init__.py  settings.py
src/formatters/: comment_formatter.py
src/github_client/: __init__.py  client.py  models.py
src/utils/: __init__.py  exceptions.py  logger.py
test_files/: app.py  auth.py  database.py
tests/: __init__.py  test_comment_formatter.py  test_diff_processor.py  test_risk_detector.py
tests/fixtures/: sample_pr_data.json
